# zipper

./: .editorconfig  .gitignore  .mdformat.toml  .yamllint.yml  CHANGELOG.md  LICENSE  README.md  mise.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: lint-markdown.yml  lint-yaml.yml  update-version.yml  uv-qualify.yml
tests/: __init__.py  test_core.py
zipper/: __init__.py  __main__.py  core.py
