[project]
name = "zipper"
version = "0.1.0"
description = "Password-based encrypted ZIP archiver with filename encryption support"
requires-python = ">=3.13"
dependencies = ["cryptography>=49.0.0,<50.0.0", "pathspec>=1.1.1,<1.2.0"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["zipper"]

[tool.hatch.build.targets.wheel]
include = ["zipper"]

[dependency-groups]
dev = [
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "mypy>=2.1.0,<3",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88
target-version = "py313"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "CPY001",
  "COM812",
  "D100",
  "D101",
  "D102",
  "D103",
  "D105",
  "D107",
  "D203",
  "D213",
  "D415",
  "EM101",
  "EM102",
  "FBT001",
  "FBT002",
  "FBT003",
  "PLR0911",
  "PLR0914",
  "PLR0915",
  "PLR2004",
  "PLR6301",
  "PLW0717",
  "T201",
  "TC001",
  "TC002",
  "TC003",
  "TRY003",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "SLF001"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["zipper"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["^build/", "^tmp/"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.rumdl]
respect_gitignore = true
exclude = [".claude/**"]
disable = [
  "MD013", # 行の長さは自由
  "MD024", # 重複した見出しを許可
  "MD025", # 複数のトップレベル見出しを許可
  "MD033", # HTML タグを許可
  "MD036", # 強調表示の過剰使用を許可
  "MD041", # ファイルの最初の行を見出しにする必要なし
]

[tool.rumdl.MD009]
strict = true
